# stdnet

./: .gitignore  CMakeLists.txt  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  test.cpp
